<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="@dimen/_20sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_layout"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#C6C6C6"
            app:boxBackgroundColor="#FAFAFA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:textColorHint="@color/editTextColor"
                android:hint="@string/email"
                android:background="@drawable/bg_outline_grey"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="@id/et_email_layout"
            app:layout_constraintTop_toBottomOf="@id/et_email_layout"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#C6C6C6"
            app:boxBackgroundColor="#FAFAFA"
            app:passwordToggleTint="@color/grey">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/editTextColor"
                android:hint="@string/password"
                android:background="@drawable/bg_outline_grey"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="@id/et_email_layout"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/bg_outline_grey"
            android:backgroundTint="@color/black"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

        <RelativeLayout
            android:id="@+id/loginLay"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@id/fbLay"
            app:layout_constraintEnd_toEndOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="@id/et_email_layout"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/bt_login"
            android:layout_marginVertical="15dp"
            >

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_toStartOf="@id/tvOr"
                android:background="@color/view_grey" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/lbl_or"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/tvOr"
                android:background="@color/view_grey" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/fbLay"
            app:layout_constraintEnd_toEndOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="@id/et_email_layout"
            android:layout_height="@dimen/_33sdp"
            app:layout_constraintBottom_toTopOf="@id/googleLay"
            app:layout_constraintTop_toBottomOf="@id/loginLay"
            android:background="@drawable/bg_outline_grey"
            android:backgroundTint="@color/fb_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_facebook"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_facebook" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/googleLay"
            app:layout_constraintEnd_toEndOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="@id/et_email_layout"
            android:layout_height="@dimen/_33sdp"
            app:layout_constraintTop_toBottomOf="@id/fbLay"
            android:background="@drawable/bg_outline_black"
            android:layout_marginVertical="@dimen/_10sdp"
          >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_google" />
        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:id="@+id/tv"
            android:textColor="#303030"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="@id/et_email_layout"
            app:layout_constraintStart_toStartOf="@id/et_email_layout"
            app:layout_constraintBottom_toTopOf="@id/vv"
            android:text="@string/lbl_privacy"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/vv"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@id/bottomLay"
            android:background="@color/view_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/bottomLay"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/grey"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/signup"
                android:padding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/signUp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>